[gd_scene load_steps=10 format=3 uid="uid://dnp6d2mqhr4r0"]

[ext_resource type="FontFile" uid="uid://b4otp6xgrkyov" path="res://assets/fonts/pixel_font.ttf" id="1_fqawy"]
[ext_resource type="Script" path="res://src/scenes/menu.gd" id="1_qxl8e"]
[ext_resource type="PackedScene" uid="uid://cgkx6epuldjwb" path="res://src/entities/tower/tower.tscn" id="3_1xweq"]
[ext_resource type="PackedScene" uid="uid://bh71fwuo605j1" path="res://src/scenes/menuBackground/grass.tscn" id="3_85w1m"]
[ext_resource type="PackedScene" uid="uid://c6r80pat5mkjv" path="res://src/scenes/settings_screen.tscn" id="4_ce58o"]
[ext_resource type="PackedScene" uid="uid://ciheiq3jt524c" path="res://src/scenes/menuBackground/river.tscn" id="4_h5eir"]
[ext_resource type="PackedScene" uid="uid://cqerv0tjl6erp" path="res://src/scenes/score_screen.tscn" id="4_s7oo7"]
[ext_resource type="PackedScene" uid="uid://cyowtg8vmfgl" path="res://src/scenes/menuBackground/plants.tscn" id="5_61m1k"]
[ext_resource type="PackedScene" uid="uid://bgtpachabgtvf" path="res://src/scenes/menuBackground/bridge.tscn" id="6_fku5n"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qxl8e")

[node name="Background" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="Background"]

[node name="grass" parent="Background" instance=ExtResource("3_85w1m")]

[node name="River" parent="Background" instance=ExtResource("4_h5eir")]

[node name="Plants" parent="Background" instance=ExtResource("5_61m1k")]

[node name="Bridge" parent="Background" instance=ExtResource("6_fku5n")]

[node name="Tower" parent="Background" instance=ExtResource("3_1xweq")]
position = Vector2(249, 8)
scale = Vector2(2, 2)

[node name="HitBox" parent="Background/Tower" index="1"]
visible = false

[node name="HealthBar" parent="Background/Tower" index="2"]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BackgroundFilter" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.156863, 0.156863, 0.156863, 0.235294)

[node name="ScoreScreen" parent="CanvasLayer" instance=ExtResource("4_s7oo7")]
visible = false

[node name="Settings" parent="CanvasLayer" instance=ExtResource("4_ce58o")]
visible = false

[node name="MenuUi" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MenuUi"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 58.0
offset_top = -351.0
offset_right = 326.0
offset_bottom = -69.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15
alignment = 1

[node name="Play" type="Button" parent="CanvasLayer/MenuUi/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_fqawy")
theme_override_font_sizes/font_size = 32
text = " Play "

[node name="Score" type="Button" parent="CanvasLayer/MenuUi/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_fqawy")
theme_override_font_sizes/font_size = 32
text = " Score "

[node name="Settings" type="Button" parent="CanvasLayer/MenuUi/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_fqawy")
theme_override_font_sizes/font_size = 32
text = " Settings "

[node name="Quit" type="Button" parent="CanvasLayer/MenuUi/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_fqawy")
theme_override_font_sizes/font_size = 32
text = " Quit "

[node name="Title" type="Label" parent="CanvasLayer/MenuUi"]
layout_mode = 1
offset_left = 63.0
offset_right = 816.0
offset_bottom = 305.0
theme_override_colors/font_outline_color = Color(0.14902, 0.14902, 0.14902, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("1_fqawy")
theme_override_font_sizes/font_size = 64
text = "Wordwall 
Warriors"
vertical_alignment = 1

[connection signal="pressed" from="CanvasLayer/ScoreScreen/VBoxContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="toggled" from="CanvasLayer/Settings/VBoxContainer/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="CanvasLayer/Settings/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuUi/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuUi/VBoxContainer/Score" to="." method="_on_score_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuUi/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuUi/VBoxContainer/Quit" to="." method="_on_quit_pressed"]

[editable path="Background/Tower"]
[editable path="CanvasLayer/ScoreScreen"]
[editable path="CanvasLayer/Settings"]
